--- a/config.toml
+++ b/config.toml
@@ -2,5 +2,5 @@ baseURL = 'https://example.com/'
 languageCode = 'hu'
 defaultContentLanguage = 'hu'
 title = 'Hugo mintaoldal - Avagy tanulom a Hugo-t'
-theme = 'ananke'
+theme = 'elate'
 canonifyurls = true
